# Nous

./: .env  .gitignore  AGENTS.md  APPLY_PROGRESS.md  App.tsx  DATABASE.md  Modelos Gemini activos.csv  PRD_Refactor.md  README.architecture.md  README.md  REFACTOR_PLAN.md  SDD_Refactor.md  TECHNICAL.md  USER_MANUAL.md  audit_report.md  audit_report_v2.md  build_error.txt  chunk_sql.js  clean_output.html  clean_studio.cjs  clean_version.html  compile_migrations.js  constants.ts  diagnostic_tasks_check.sql  diagnostics.sql  eslint.config.js  eslint.config.mjs  fix_all.cjs  fix_all2.cjs  fix_all3.cjs  fix_all4.cjs  fix_all5.cjs  fix_all6.cjs  fix_article_interface.cjs  fix_build23.cjs  fix_build24.cjs  fix_build25.cjs  fix_build26.cjs  fix_build27.cjs  fix_build28.cjs  (+87 more)
.agent/: implementation_plan_report_generator.md
.atl/: skill-registry.md
.engram/: AI_HIERARCHY.md  POLLINATIONS_MANUAL.md  observations.md
.gemini/: settings.json
.github/: dependabot.yml
.sdd/: config.yaml  media-tab-v3-filas-dinamicas.md  tournament_results.md  tournament_results_final.md  tournament_results_r2.md  tournament_results_r3.md  tournament_results_r4.md  tournament_results_r5.md  tournament_results_r6.md
context/: AuthContext.tsx
docs/: AI_HIERARCHY.md  DATAFORSEO_MANUAL.md
nous_2.0/src-tauri/: 2  Cargo.toml  build_errors.txt  tauri.conf.json
nous_2.0/src-tauri/capabilities/: crawler.json  default.json
nous_2.0/src-tauri/resources/: Gemma3.Modelfile
nous_2.0/src-tauri/src/: crawler.rs  intelligence.rs  lib.rs  ollama_manager.rs  operations.rs  refinery.rs  ws_server.rs
(+1153 files in other folders)
