[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
sysinfo = "0.36.1"
headless_chrome = "1.0.10"
reqwest = "0.13.2"
scraper = "0.25.0"
readability = "0.3.0"
vader_sentiment = "0.1.1"
text_analysis = "0.4.8"
polars = { version = "0.53.0", features = ["lazy", "csv", "json", "parquet", "dtype-full", "strings", "temporal"] }
csv = "1.4.0"
arrow = "54.3.1"
user-idle = "0.6.0"
percent-encoding = "2.3"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
